modify the core change the libsbml-4.0.1 to libsbml-3.4.1

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -4,9 +4,11 @@ INCLUDE_DIRECTORIES( AFTER
 	${IGAME_SOURCE_DIR}/core/strcacu
 	${IGAME_SOURCE_DIR}/core/
 	${IGAME_SOURCE_DIR}/core/copsiPlot
-	${IGAME_SOURCE_DIR}/ExternalCode/sbml-4.0.1/
-	${IGAME_SOURCE_DIR}/ExternalCode/sbml-4.0.1/sbml
+	${IGAME_SOURCE_DIR}/ExternalCode/sbml-3.4.1/
+	${IGAME_SOURCE_DIR}/ExternalCode/sbml-3.4.1/sbml
 	)
+#${IGAME_SOURCE_DIR}/ExternalCode/sbml-4.0.1/
+#${IGAME_SOURCE_DIR}/ExternalCode/sbml-4.0.1/sbml
 
 add_subdirectory (copsiPlot)
 
@@ -37,27 +39,37 @@ ADD_LIBRARY( core
 TARGET_LINK_LIBRARIES( core
   ${QT_LIBRARIES}
   qwt5
-  sbml_solver
   dbxml
-  sbml-4.0.1
+  sbml-3.4.1
   bdinterface
   utility
   str_cacu
   )
 
-ADD_EXECUTABLE( helloplot
-	${PRO_PLOT_TEST_SRC}
-	${PRO_PLOT_TEST_H}
-	)
+#TARGET_LINK_LIBRARIES( core
+#  ${QT_LIBRARIES}
+#  qwt5
+#  sbml_solver
+#  dbxml
+#  sbml-4.0.1
+#  bdinterface
+#  utility
+#  str_cacu
+#  )
 
-TARGET_LINK_LIBRARIES( helloplot
-  ${QT_LIBRARIES}
-  qwt5
-  plot
-  sbml-4.0.1
-  sbml_solver
-  utility
-  )
+#ADD_EXECUTABLE( helloplot
+#	${PRO_PLOT_TEST_SRC}
+#	${PRO_PLOT_TEST_H}
+#	)
+#
+#TARGET_LINK_LIBRARIES( helloplot
+#  ${QT_LIBRARIES}
+#  qwt5
+#  plot
+#  sbml-4.0.1
+#  sbml_solver
+#  utility
+#  )
 
 ADD_EXECUTABLE( igame
 	${PRO_MAIN_CPP}
