--- a/src/ExternalCode/CMakeLists.txt
+++ b/src/ExternalCode/CMakeLists.txt
@@ -1,4 +1,5 @@
 SET(LIBRARY_OUTPUT_PATH ${EXTERNAL_LIB_OUTPUT_PATH})
 
+ADD_SUBDIRECTORY( libsbml-3.4.1 )
 #ADD_SUBDIRECTORY( qwt )
 #ADD_SUBDIRECTORY( SBML_odeSolver-1.6.0 )
