modify the build system
1 add install and uninstall function
2 add igame related module find_package function

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,11 @@ SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DQT_DEBUG")
 SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} --export-all-symbols")
 cmake_minimum_required(VERSION 2.6)
 
+set(CMAKE-INSTALL-RPATH-USE-LINK-PATH TRUE)
+
+#load MACROS
+INCLUDE( CMakeModules/CustomModules.cmake )
+
 #---------------------------------------------------------------------------
 # Define EXECUTABLE_OUTPUT_PATH and LIBRARY_OUTPUT_PATH
 #---------------------------------------------------------------------------
@@ -24,18 +29,27 @@ SET(EXECUTABLE_OUTPUT_PATH
  ${IGAME_BINARY_DIR}/bin
  CACHE PATH "Single output directory for building all executables.")
 SET(CPP_LIBRARY_OUTPUT_PATH
- ${IGAME_BINARY_DIR}/bin/Plugins/
+ ${IGAME_BINARY_DIR}/bin/
  CACHE PATH "Single output directory for building all cpp libraries."
 )
 SET(C_LIBRARY_OUTPUT_PATH
- ${IGAME_BINARY_DIR}/bin/Plugins/c/
+ ${IGAME_BINARY_DIR}/bin/
  CACHE PATH "Single output directory for building all c libraries."
 )
 
-SET(CMAKE_INSTALL_PREFIX
- ${IGAME_SOURCE_DIR}/Build/
- CACHE INTERNAL "Single output directory for building all c libraries."
-)
+SET( CMAKE_MODULE_PATH
+	"${PROJECT_SOURCE_DIR}/CMakeModules/;${CMAKE_MODULE_PATH}" )
+
+#FIND PACKAGES
+FIND_PACKAGE( sbml )
+FIND_PACKAGE( dbxml )
+FIND_PACKAGE( copasi )
+FIND_PACKAGE( qwt )
+#FIND_PACKAGE( qwtplot3d )
+#FIND_PACKAGE( odesolver )
+#FIND_PACKAGE( sundials )
+
+#INSTALL
 
 #QT4
 FIND_PACKAGE( Qt4 )
@@ -54,8 +68,63 @@ LINK_DIRECTORIES(
 	${C_LIBRARY_OUTPUT_PATH}
 	${IGAME_BINARY_DIR}
 	${EXECUTABLE_OUTPUT_PATH}
-	${EXTERNAL_LIB_OUTPUT_PATH}
 	)
+#${EXTERNAL_LIB_OUTPUT_PATH}
+
+IF (SBML_LIBRARY)
+	LINK_DIRECTORIES(
+		${SBML_LIBRARY})
+ENDIF (SBML_LIBRARY)
+
+IF (DBXML_LIBRARY)
+	LINK_DIRECTORIES(
+		${DBXML_LIBRARY} )
+ENDIF (DBXML_LIBRARY)
+
+IF (COPASI_LIBRARY)
+	LINK_DIRECTORIES(
+		${COPASI_LIBRARY} )
+ENDIF (COPASI_LIBRARY)
+
+IF (NOT SBML_INCLUDE_DIR)
+	INCLUDE_DIRECTORIES( BEFORE
+		${IGAME_SOURCE_DIR}/ExternalCode/sbml-3.4.1/
+		${IGAME_SOURCE_DIR}/ExternalCode/sbml-3.4.1/sbml
+		)		
+ELSE(NOT SBML_INCLUDE_DIR)
+	INCLUDE_DIRECTORIES( BEFORE
+		${SBML_INCLUDE_DIR} )
+ENDIF(NOT SBML_INCLUDE_DIR)
+
+IF (NOT QWT_INCLUDE_DIR)
+	INCLUDE_DIRECTORIES( BEFORE
+		${IGAME_SOURCE_DIR}/ExternalCode/qwt/include
+		)		
+ELSE(NOT QWT_INCLUDE_DIR)
+	INCLUDE_DIRECTORIES( BEFORE
+		${QWT_INCLUDE_DIR} )
+ENDIF(NOT QWT_INCLUDE_DIR)
+
+IF (NOT DBXML_INCLUDE_DIR)
+	INCLUDE_DIRECTORIES( BEFORE
+		${IGAME_SOURCE_DIR}/ExternalCode/bdbxml/include/
+		${IGAME_SOURCE_DIR}/ExternalCode/bdbxml/include/dbxml
+		)		
+ELSE(NOT DBXML_INCLUDE_DIR)
+	INCLUDE_DIRECTORIES( BEFORE
+		${DBXML_INCLUDE_DIR} )
+ENDIF(NOT DBXML_INCLUDE_DIR)
+
+IF (NOT COPASI_INCLUDE_DIR)
+	INCLUDE_DIRECTORIES( BEFORE
+		${IGAME_SOURCE_DIR}/ExternalCode/copasi-32-src/copasi
+		${IGAME_SOURCE_DIR}/ExternalCode/copasi-32-src
+		)		
+ELSE(NOT COPASI_INCLUDE_DIR)
+	INCLUDE_DIRECTORIES( BEFORE
+		${COPASI_INCLUDE_DIR} )
+ENDIF(NOT COPASI_INCLUDE_DIR)
+	
 
 INCLUDE_DIRECTORIES( BEFORE
 	${CPP_LIBRARY_OUTPUT_PATH}
@@ -64,19 +133,17 @@ INCLUDE_DIRECTORIES( BEFORE
 	${QT_INCLUDES}
 	${IGAME_SOURCE_DIR}/
 	${IGAME_SOURCE_DIR}/utility
-	${IGAME_SOURCE_DIR}/ExternalCode/qwt/include
-	${IGAME_SOURCE_DIR}/ExternalCode/qwtplot3d/include
-	${IGAME_SOURCE_DIR}/ExternalCode/bdbxml
-	${IGAME_SOURCE_DIR}/ExternalCode/bdbxml/include/
-	${IGAME_SOURCE_DIR}/ExternalCode/bdbxml/include/dbxml
 	${IGAME_SOURCE_DIR}/BdInterface
 	${IGAME_SOURCE_DIR}/QwtPlot
 	${IGAME_SOURCE_DIR}/core
-	${IGAME_SOURCE_DIR}/ExternalCode/SBML_odeSolver-1.6.0/src
-	${IGAME_SOURCE_DIR}/ExternalCode/SBML_odeSolver-1.6.0/src/sbmlsolver
-	${IGAME_SOURCE_DIR}/ExternalCode/sundials-2.1.1/include
-	${IGAME_SOURCE_DIR}/ExternalCode/
 	)
+#	${IGAME_SOURCE_DIR}/ExternalCode/qwt/include
+#	${IGAME_SOURCE_DIR}/ExternalCode/qwtplot3d/include
+#	${IGAME_SOURCE_DIR}/ExternalCode/bdbxml
+#	${IGAME_SOURCE_DIR}/ExternalCode/SBML_odeSolver-1.6.0/src
+#	${IGAME_SOURCE_DIR}/ExternalCode/SBML_odeSolver-1.6.0/src/sbmlsolver
+#	${IGAME_SOURCE_DIR}/ExternalCode/sundials-2.1.1/include
+#	${IGAME_SOURCE_DIR}/ExternalCode/
 
 add_subdirectory (ExternalCode)
 add_subdirectory (BdInterface)
@@ -86,3 +153,8 @@ add_subdirectory (core)
 #add_subdirectory (tools)
 #add_subdirectory (ExternalLib)
 #add_subdirectory (SimTool)
+
+
+ADD_CUSTOM_TARGET(uninstall
+	COMMAND rm -rvf ${CMAKE_INSTALL_PREFIX}/igame
+	)
