--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -4,8 +4,6 @@ INCLUDE_DIRECTORIES( AFTER
 	${IGAME_SOURCE_DIR}/core/strcacu
 	${IGAME_SOURCE_DIR}/core/
 	${IGAME_SOURCE_DIR}/core/copsiPlot
-	${IGAME_SOURCE_DIR}/ExternalCode/sbml-3.4.1/
-	${IGAME_SOURCE_DIR}/ExternalCode/sbml-3.4.1/sbml
 	)
 #${IGAME_SOURCE_DIR}/ExternalCode/sbml-4.0.1/
 #${IGAME_SOURCE_DIR}/ExternalCode/sbml-4.0.1/sbml
@@ -79,3 +77,7 @@ TARGET_LINK_LIBRARIES( igame
 	core
 	copsi_wrapper 
 	)
+
+INSTALL_PROJECT( igame )
+INSTALL_PROJECT( core )
+INSTALL_PROJECT( test_strcacu )
