--- a/src/core/copsiPlot/CMakeLists.txt
+++ b/src/core/copsiPlot/CMakeLists.txt
@@ -4,12 +4,6 @@ SET( QT_USE_QT3SUPPORT TRUE)
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLinux -DWITH_CSPMETHOD -DCOPASI_DEBUG -DCOPASI_EXTUNIT -DUSE_CLAPACK -DQT_QT3SUPPORT_LIB -DQT3_SUPPORT -DQT_XML_LIB -DQT_OPENGL_LIB -DQT_GUI_LIB -DQT_CORE_LIB -DQT_SHARED")
 
 INCLUDE_DIRECTORIES( BEFORE
-	${IGAME_SOURCE_DIR}/ExternalCode/sbml-3.4.1
-	${IGAME_SOURCE_DIR}/ExternalCode/sbml-3.4.1/sbml
-	${IGAME_SOURCE_DIR}/ExternalCode/CLAPACK-3.2.1/include
-	${IGAME_SOURCE_DIR}/ExternalCode/raptor-1.4.19/src
-	${IGAME_SOURCE_DIR}/ExternalCode/copasi-32-src/copasi
-	${IGAME_SOURCE_DIR}/ExternalCode/copasi-32-src
 	)
 
 FILE(GLOB PRO_CORE_SRC
@@ -53,3 +47,5 @@ TARGET_LINK_LIBRARIES( hellocopsi
 	qwtplot3d
 	${QT_LIBRARIES}
   )
+
+INSTALL_PROJECT( copsi_wrapper )
