--- a/src/ExternalCode/CMakeLists.txt
+++ b/src/ExternalCode/CMakeLists.txt
@@ -2,4 +2,4 @@ SET(LIBRARY_OUTPUT_PATH ${EXTERNAL_LIB_OUTPUT_PATH})
 
 #ADD_SUBDIRECTORY( copasi-32-src )
 #ADD_SUBDIRECTORY( qwt )
-ADD_SUBDIRECTORY( SBML_odeSolver-1.6.0 )
+#ADD_SUBDIRECTORY( SBML_odeSolver-1.6.0 )
