modify core cmakelist file for ignore copasi build in win32

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -5,7 +5,10 @@ INCLUDE_DIRECTORIES( AFTER
 	${IGAME_SOURCE_DIR}/core/
 	)
 
+if( NOT WIN32 )
 add_subdirectory (copsiPlot)
+endif( NOT WIN32 )
+
 add_subdirectory (strcacu)
 
 #source file
