--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -130,6 +130,7 @@ INCLUDE_DIRECTORIES( BEFORE
 	${CPP_LIBRARY_OUTPUT_PATH}
 	${C_LIBRARY_OUTPUT_PATH}
 	${IGAME_BINARY_DIR}/igameUi
+	${IGAME_SOURCE_DIR}/igameUiMort
 	${QT_INCLUDES}
 	${IGAME_SOURCE_DIR}/
 	${IGAME_SOURCE_DIR}/utility
@@ -152,6 +153,7 @@ add_subdirectory (BdInterface)
 add_subdirectory (QwtPlot)
 add_subdirectory (core)
 add_subdirectory (igameUi)
+add_subdirectory (igameUiMort)
 #add_subdirectory (ExternalLib)
 #add_subdirectory (SimTool)
 
