--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -129,7 +129,7 @@ ENDIF(NOT COPASI_INCLUDE_DIR)
 INCLUDE_DIRECTORIES( BEFORE
 	${CPP_LIBRARY_OUTPUT_PATH}
 	${C_LIBRARY_OUTPUT_PATH}
-	${IGAME_BINARY_DIR}/igameUi
+	${IGAME_SOURCE_DIR}/igameUi
 	${IGAME_SOURCE_DIR}/igameUiMort
 	${QT_INCLUDES}
 	${IGAME_SOURCE_DIR}/
