solve the disappear problem Reason: 	Override the MScene addItem function by mistake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -147,11 +147,11 @@ INCLUDE_DIRECTORIES( BEFORE
 #	${IGAME_SOURCE_DIR}/ExternalCode/sundials-2.1.1/include
 #	${IGAME_SOURCE_DIR}/ExternalCode/
 
-add_subdirectory (ExternalCode)
+#add_subdirectory (ExternalCode)
 add_subdirectory (utility)
-add_subdirectory (BdInterface)
-add_subdirectory (QwtPlot)
-add_subdirectory (core)
+#add_subdirectory (BdInterface)
+#add_subdirectory (QwtPlot)
+#add_subdirectory (core)
 add_subdirectory (igameUi)
 add_subdirectory (igameUiMort)
 #add_subdirectory (ExternalLib)
