--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -150,9 +150,9 @@ INCLUDE_DIRECTORIES( BEFORE
 #add_subdirectory (ExternalCode)
 add_subdirectory (utility)
 add_subdirectory (BdInterface)
-#add_subdirectory (QwtPlot)
+add_subdirectory (QwtPlot)
 add_subdirectory (core)
-#add_subdirectory (igameUi)
+add_subdirectory (igameUi)
 add_subdirectory (igameUiMort)
 #add_subdirectory (ExternalLib)
 
